--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.15.13",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@mui/x-date-pickers": "^6.19.7",
     "@reduxjs/toolkit": "^2.2.3",
     "animate.css": "^4.1.1",
