--- a/backend/api/.env
+++ b/backend/api/.env
@@ -1,8 +1,19 @@
-FRONTEND_URL= http://localhost:5173
+
+
+# Google OAuth
 GOOGLE_OAUTH_CLIENT_ID=806447733386-p0gkdhoiq83i3akb9nrr3pnb5b6mp5et.apps.googleusercontent.com
 GOOGLE_OAUTH_CLIENT_SECRET=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
+
+# Microsoft (Azure) OAuth
+FACEBOOK_OAUTH_CLIENT_ID=521997213653676
+FACEBOOK_OAUTH_CLIENT_SECRET=0a37495c2759fc11b9c444d8d3628529
+
+# JWT Secret Key
 JWT_SECRET_KEY=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
 
+# MongoDB URL
 MONGODB_URL=mongodb+srv://rajpawar1808:5sWeHSaIqUJYUCD3@cluster0.q4bj0fh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
 # mongodb+srv://saurabhpkadam1998:aLcxSkd27pwK9aZq@aichefmaster.8ljryes.mongodb.net/?retryWrites=true&w=majority&appName=AIChefMaster
+
+# Frontend URL (for redirection after login)
+FRONTEND_URL=http://localhost:5173
